# gengo

./: .all-contributorsrc  .dockerignore  .editorconfig  .git-blame-ignore-revs  .gitattributes  .gitignore  .mailmap  .taplo.toml  CODEOWNERS  CONTRIBUTING.md  CREDITS.md  Cargo.toml  Dockerfile  HACKING.md  LICENSE-MIT  README.md  bin.js  crates-io.md  install.ps1  install.sh  languages.yaml
.devcontainer/: devcontainer.json  postCreate.sh
.github/: dependabot.yml  pull_request_template.md  release.yml
.github/ISSUE_TEMPLATE/: new-language.yml
.github/PULL_REQUEST_TEMPLATE/: new_language.md
.github/workflows/: ci.yml  label-new-language-prs.yml  release.yml  update-snapshots.yml
docs/: AI_POLICY.md  CONTRIBUTING.md  HACKING.md  INSTALLATION.md  RELEASING.md  analysis-flowchart.mmd  analysis-state-diagram.mmd  index.html  snippets.md
gengo/: Cargo.toml  build.rs  languages.yaml
gengo-bin/: Cargo.toml
gengo-bin/src/: cli.rs
gengo-bin/tests/: cli.rs  test_cli.rs
gengo-bin/tests/snapshots/: test_cli__breakdown_javascript_repo.snap  test_cli__color_breakdown_javascript_repo.snap  test_cli__color_javascript_repo.snap  test_cli__it_works.snap  test_cli__javascript_repo.snap  test_cli__json_output_on_javascript_repo.snap
gengo-impl/: Cargo.toml  languages.yaml
gengo-impl/fixtures/: default_analyzers.yaml  language_enum.yaml
gengo-impl/src/: lib.rs
gengo-impl/src/snapshots/: gengo_impl__tests__default_analyzers_impl_rendered.snap  gengo_impl__tests__default_analyzers_impl_tokens.snap  gengo_impl__tests__language_enum_impl_rendered.snap  gengo_impl__tests__language_enum_impl_tokens.snap
gengo-language/: Cargo.toml  README.md  build.rs  languages.yaml
gengo-language/src/: lib.rs
gengo-language/tests/: test.rs
gengo/benches/: run_on_self.rs
gengo/src/: analysis.rs  binary.rs  builder.rs  documentation.rs  error.rs  generated.rs  lib.rs  vendored.rs
gengo/src/analysis/: mod.rs  summary.rs
gengo/src/file_source/: directory.rs  git.rs  mod.rs
gengo/src/language/: mod.rs
gengo/src/languages/: analyzer.rs  matcher.rs  mod.rs
gengo/src/provider/: mod.rs
gengo/templates/: analyzer.rs.tera  languages.rs.tera
gengo/tests/: analyzers_tests.rs  gengo_test.rs  language_tests.rs  util.rs
gengo/tests/fixtures/: test_check_json_with_comments-analyzers.yaml  test_check_json_with_comments-file.json  test_check_shebang_shell-analyzers.yaml  test_javascript-analyzers.yaml  test_simple-analyzers.yaml  test_simple-file.sh
gengo/tests/snapshots/: analyzers_tests__analyzers_tests__test_simple.snap  analyzers_tests__analyzers_tests__test_simple__by_filepath.snap  analyzers_tests__analyzers_tests__test_simple__by_shebang.snap  analyzers_tests__analyzers_tests__test_with_heuristics__simple.snap  analyzers_tests__analyzers_tests__test_with_heuristics__with_heuristics.snap  analyzers_tests__by_filepath_json_with_comments.snap  analyzers_tests__by_shebang_shell.snap  analyzers_tests__check_json_with_comments.snap  analyzers_tests__check_json_with_comments.snap.new  gengo_test__directory_fixtures.snap  gengo_test__git_javascript.snap  gengo_test__javascript.snap  gengo_test__javascript_windows.snap
samples-test/: Cargo.toml
samples-test/samples/Batch File/: calculator.bat  sysinfo.cmd
samples-test/samples/C/: progress-bar.c  progress-bar.h
samples-test/samples/C++/: progress-bar.cpp  progress-bar.h
samples-test/samples/CSS/: style.css
samples-test/samples/Common Lisp/: cp.lisp
samples-test/samples/Coq/: nat_tree.v
samples-test/samples/Gleam/: math.gleam
samples-test/samples/Go/: language_stats.go
samples-test/samples/HCL/: spec.hcl
samples-test/samples/HTML/: site.html
samples-test/samples/Ignore List/: .dockerignore  .gitignore  .npmignore  .vercelignore
samples-test/samples/JSON/: data.json
samples-test/samples/JSON with Comments/: devcontainer.json  tsconfig.json
samples-test/samples/JavaScript/: button.jsx  count_expression.js
samples-test/samples/Jupyter Notebook/: simple.ipynb
samples-test/samples/Makefile/: Makefile
samples-test/samples/Markdown/: sample.md
samples-test/samples/MoonBit/: expr.mbt  pkg.mbti  script.mbtx
samples-test/samples/OpenSCAD/: sFeeder.scad
samples-test/samples/Org/: org.org
samples-test/samples/PowerShell/: check_for_updates.ps1
samples-test/samples/Python/: minecraft.py
samples-test/samples/Ruby/: repofetch.rb
samples-test/samples/SQL/: job_info.sql
samples-test/samples/Scheme/: example.scm
samples-test/samples/Shell/: rename.sh  rename.zsh
samples-test/samples/TOML/: Cargo.toml  config.toml
samples-test/samples/TypeScript/: App.tsx  calculate.ts
samples-test/samples/Verilog/: counter.v
samples-test/samples/XML/: types.xml
samples-test/samples/fish/: mkcd.fish
samples-test/samples/reStructured Text/: example.rst
samples-test/src/: lib.rs
scoop/: gengo.json
scripts/: check-languages-file.rb  conflicts.rb  preview-nerd-font-glyphs.rb  should-tag-new-language.rb  update-scoop.rb
src/: bin.ts
