[workspace]
members = ["gengo", "gengo-bin", "samples-test"]
resolver = "2"

[workspace.dependencies]
indexmap = "2"
serde_json = "1"

[workspace.package]
description = "Get the language distribution stats of your repository"
version = "0.14.0"
edition = "2024"
repository = "https://github.com/spenserblack/gengo"
readme = "README.md"
license = "MIT OR Apache-2.0"
rust-version = "1.86"

keywords = ["language-statistics"]
