[workspace]
members = ["gengo", "gengo-bin", "gengo-language", "samples-test"]
resolver = "2"

[workspace.dependencies]
glob = "0.3"
indexmap = "2"
regex = "1"
rstest = { version = "0.26", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[workspace.package]
description = "Get the language distribution stats of your repository"
version = "0.14.1"
edition = "2024"
repository = "https://github.com/spenserblack/gengo"
readme = "README.md"
license = "MIT OR Apache-2.0"
rust-version = "1.86"

keywords = ["language-statistics"]
