[package]
name = "gengo-bin"
description.workspace = true
readme = "crates-io.md"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
rust-version.workspace = true

categories = ["command-line-utilities"]
keywords.workspace = true

exclude = ["README.md"]

[[bin]]
name = "gengo"

[features]
default = ["color", "gengo/max-performance"]
color = ["chromaterm", "gengo/chromaterm", "relative-luminance"]

[dependencies]
chromaterm = { workspace = true, optional = true }
clap = { version = "4", features = ["derive", "wrap_help"] }
gengo = { path = "../gengo", version = "0.13", default-features = false }
indexmap.workspace = true
relative-luminance = { version = "1", optional = true }
serde_json.workspace = true

[dev-dependencies]
insta = { version = "1", features = ["json"] }
serde_json.workspace = true
