[package]
name = "gengo-bin"
description.workspace = true
readme = "crates-io.md"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
rust-version.workspace = true

categories = ["command-line-utilities"]
keywords.workspace = true

exclude = ["README.md"]

[[bin]]
name = "gengo"

[features]
default = ["color", "gengo/max-performance"]
color = ["dep:chromaterm", "dep:relative-luminance"]

[dependencies]
chromaterm = { version = "0.1.1", optional = true }
clap = { version = "4", features = ["derive", "wrap_help"] }
gengo = { path = "../gengo", version = "0.14", default-features = false, features = [
    "directory",
    "git",
] }
indexmap.workspace = true
relative-luminance = { version = "1", optional = true }
serde_json.workspace = true

[dev-dependencies]
insta = { version = "1", features = ["json"] }
serde_json.workspace = true
