[package]
name = "gengo-impl"
version = "0.1.0"
edition = "2021"

exclude = ["fixtures/", "src/snapshots/"]

[lib]
proc-macro = true

[dependencies]
indexmap = { version = "2", features = ["serde"] }
proc-macro2 = "1"
quote = "1"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
syn = "2"

[dev-dependencies]
insta = "1"
paste = "1"
