[package]
name = "gengo-language"
description.workspace = true
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
rust-version.workspace = true

keywords.workspace = true

[dependencies]
glob.workspace = true
regex.workspace = true
serde.workspace = true

[build-dependencies]
indexmap = { version = "2", features = ["serde"] }
proc-macro2 = "1"
serde_json.workspace = true
serde_yaml = "0.9"
quote = "1"

[dev-dependencies]
rstest.workspace = true
