[package]
name = "gengo"
description.workspace = true
readme = "crates-io.md"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
rust-version.workspace = true

keywords.workspace = true

exclude = ["README.md"]

[features]
default = ["max-performance-safe"]
max-performance = ["gix/max-performance"]
max-performance-safe = ["gix/max-performance-safe"]

[dependencies]
gix = { version = ">= 0.56, <= 0.69", default-features = false, features = [
    "attributes",
    "index",
    "parallel",
    "revision",
] }
glob = "0.3"
ignore = "0.4"
indexmap = { workspace = true, features = ["rayon", "serde"] }
owo-colors = { workspace = true, optional = true }
rayon = "1"
regex = "1"
serde = { version = "1", features = ["derive"] }

[build-dependencies]
indexmap = { version = "2", features = ["serde"] }
proc-macro2 = "1"
serde_json.workspace = true
serde_yaml = "0.9"
quote = "1"

[dev-dependencies]
criterion = { version = "0.5", default-features = false, features = ["rayon", "cargo_bench_support"] }
insta = "1"
rstest = { version = "0.23", default-features = false }
serde_yaml = "0.9"

[[bench]]
# NOTE: We run on this repo as a real-world example
name = "run_on_self"
harness = false
