[package]
name = "gengo"
description.workspace = true
readme = "crates-io.md"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
rust-version.workspace = true

keywords.workspace = true

exclude = ["README.md"]

[features]
default = ["directory", "git", "max-performance-safe"]

# directory provides the ability to walk and analyze a filesystem directory
directory = ["dep:ignore"]

# git provides the ability to read from git repositories
git = ["dep:gix"]

# TODO Rename to gix-*
max-performance = ["dep:gix", "gix/max-performance"]
max-performance-safe = ["dep:gix", "gix/max-performance-safe"]

[dependencies]
gengo-language = { path = "../gengo-language", version = "0.14" }
gix = { version = ">= 0.56, <= 0.76", optional = true, default-features = false, features = [
    "attributes",
    "index",
    "parallel",
    "revision",
] }
glob.workspace = true
ignore = { version = "0.4", optional = true }
indexmap = { workspace = true, features = ["rayon", "serde"] }
rayon = "1"
regex.workspace = true
serde.workspace = true

[dev-dependencies]
criterion = { version = "0.8", default-features = false, features = [
    "cargo_bench_support",
    "rayon",
] }
insta = "1"
rstest.workspace = true
serde_yaml.workspace = true

[[bench]]
# NOTE: We run on this repo as a real-world example
name = "run_on_self"
harness = false
